# gds_fdtd

./: .buildinfo  .gitignore  .klayout_tidy3d.py.swp  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  ex2_DirectionalCoupler.oas  genindex.html  index.html  klayout_tidy3d.py  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_test.yml  build_docs.yml  main.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: devices.gds  tech.yaml
examples/01_simulation/: 01a_directional_coupler_te1550.py  01a_directional_coupler_te1550nm.py  directional_coupler_te1550nm.py
examples/02_gdsimport/: 02a_crossing_te1550.py  crossing_te1550.gds
examples/02_sparameters/: crossing_te1550.py
examples/03_multilayer_device/: 03a_escalator_te1550.py  03a_si_sin_escalator_te1550.py
examples/04_import_technology/: 04a_si_sin_escalator.py  04a_si_sin_escalator_te1550.py  04b_convergence_sbend.py  crossing_te1550.py  sbend.gds  si_sin_escalator.py  tech.yaml
examples/05_dual_polarization/: 05a_si_sin_escalator.py  pol_split_rot.py  si_sin_escalator.gds
examples/05_gdsfactory/: gf_bend.py  tech.yaml
examples/06_gdsfactory/: 06a_gf_bend.py
examples/07_lumerical/: 07a_to_lumerical.py  07b_fdtd_lumerical.py  tech.yaml
examples/08_prefab/: 08a_bragg_prefab.py
examples/crossing/: example_crossing.py
examples/crossing_te1550/: crossing_te1550.py
examples/directional_coupler_te1550/: directional_coupler_te1550.gds  directional_coupler_te1550nm.py
examples/escalator_te1550/: escalator_te1550.gds  (+1 more)
gds_fdtd/: __init__.py  core.py  lum_tools.py  lyprocessor.py  simprocessor.py
gds_tidy3d/: __init__.py  core.py  lum_tools.py  lyprocessor.py  simprocessor.py
siepic_tidy3d/: __init__.py  core.py  extend.py  geometry.py  lyprocessor.py  sim.py  simprocessor.py
siepic_tidy3d_v2/: example_crossing.py  geometry.py
tests/: __init__.py  bad_topcells.gds  si_sin_escalator_2topcells.gds  tech.yaml  test_gds_fdtd.py  test_gds_tidy3d.py
(+19 files in other folders)
