[tool.poetry]
name = "gds_fdtd"
version = "0.3.0"
description = "A modernized package for simulating photonics designs."
authors = ["Mustafa Hammood <mustafa@siepic.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mustafacc/gds_fdtd"
repository = "https://github.com/mustafacc/gds_fdtd"
keywords = ["photonics", "fdtd", "simulation", "gds", "silicon-photonics", "optics", "simulation"]

[tool.poetry.dependencies]
python = ">=3.10"
pip = ">=23.3"
bump2version = "0.5.11"
wheel = ">=0.38.1"
watchdog = "0.9.0"
twine = "1.14.0"
klayout = "0.29.6"
tidy3d = "2.5.2"
gdsfactory = { version = ">=8.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "6.2.4"
Sphinx = "^4.5.0"
black = "^23.7.0"
flake8 = "3.7.8"
tox = "3.14.0"
coverage = "4.5.4"

[tool.poetry.extras]
gdsfactory = ["gdsfactory"]

[tool.pytest.ini_options]
addopts = "--cov=."

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
