[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gds_fdtd"
version = "0.3.0"
description = "A modernized package for simulating photonics designs."
authors = [
    {name = "Mustafa Hammood", email = "mustafa@siepic.com"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/mustafacc/gds_fdtd"
repository = "https://github.com/mustafacc/gds_fdtd"
keywords = ["photonics", "fdtd", "simulation", "gds", "silicon-photonics", "optics", "simulation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pip>=23.3",
    "bump2version==0.5.11",
    "wheel>=0.38.1",
    "watchdog==0.9.0",
    "twine==1.14.0",
    "klayout==0.29.6",
    "tidy3d==2.7.3"
]

[project.optional-dependencies]
gdsfactory = ["gdsfactory>=8.0"]
dev = ["pytest", "coverage"]
prefab = ["prefab==1.0.4"]

[tool.pytest.ini_options]
addopts = "--cov=."

[tool.flake8]
max-line-length = 88
